tests/application/gateway-api-migration/application-legacy.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: migration-app
spec:
  image: image
  port: 8080
  ingresses:
    - migration-app.example.com
    - migration-app-custom.example.com+migration-app-custom-tls
  redirectToHTTPS: true
