tests/application/gateway-api-migration/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-application-migration
  labels:
    istio.io/rev: asm-stable
