tests/application/gateway-api-migration/ready-secret.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: migration-app-custom-tls
  namespace: istio-gateways
spec:
  dnsNames:
    - migration-app-custom.example.com
  issuerRef:
    kind: ClusterIssuer
    name: cluster-issuer
  secretName: migration-app-custom-tls
